--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "@hono/node-server": "1.19.0",
-    "hono": "4.9.2"
+    "hono": "4.9.2",
+    "zod": "4.0.17"
   },
   "devDependencies": {
     "@eslint/js": "9.33.0",
