--- a/.prettierrc
+++ b/.prettierrc
@@ -6,6 +6,5 @@
   "printWidth": 100,
   "bracketSpacing": true,
   "arrowParens": "avoid",
-  "endOfLine": "lf",
-  "insertFinalNewline": true
+  "endOfLine": "lf"
 }
